...
            _buildNavItem(
              0,
              'Home',
              Icons.task_alt_rounded,
            ),
            const SizedBox(width: 66),
            _buildNavItem(1, 'Points', Icons.bar_chart_rounded),
            _buildNavItem(2, 'Profile', Icons.person_outline),
          ],
        ),
      ),
    );
  }
...
    return Container(
      height: 70,
      width: 70,
      margin: const EdgeInsets.only(
          top: 30), // Alineación con la barra de navegación
      child: FloatingActionButton(
        key: const Key('newTask'),
        onPressed: onPressed,
        elevation: 8,
        backgroundColor: Colors.transparent, // Fondo transparente
        shape: const CircleBorder(),
        child: Container(
          width: 70,
...
